# chef_agent_api

./: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_message_recipe_data.py  3d1a47267ba5_create_threads_and_messages_tables.py  5b6ca32250d8_user.py  9e7df46889a5_convert_thread_and_message_ids_to_uuid.py  a3c265ea8969_messages_threads_update_user.py
app/: main.py
app/agents/chef_agent/: agent.py  checkpointer.py  middlewares.py  prompt.py  schemas.py
app/agents/chef_agent/tools/: recipe_tool.py  state_tools.py  web_search_tool.py
app/agents/general_agent/: agent.py  middlewares.py  prompt.py  schemas.py
app/agents/general_agent/tools/: chef_agent.py  present_recipes_tool.py  save_recipe_tool.py  state_tools.py
app/api/v1/dependencies/: auth0.py
app/api/v1/routers/: chat.py  message.py  recipe.py  thread.py  user.py
app/core/: config.py
app/models/: message.py  recipe.py  thread.py  user.py
app/schemas/: chat.py  message.py  recipe.py  thread.py  user.py
app/services/: chat_service.py  message_service.py  recipe_service.py  thread_service.py
app/services/agents/chef_agent/: agent.py  prompt.py
app/utils/: recipe_utils.py
docs/: API_FRONTEND_GUIDE.md
utils/image_parser/: image_to_b64.py
