[project]
name = "chef-agent-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "auth0-python>=4.13.0",
    "authlib>=1.6.6",
    "fastapi[standard]>=0.128.0",
    "langchain-openai>=1.1.7",
    "langchain[standard]>=1.2.3",
    "langgraph[standard]>=1.0.5",
    "langgraph-checkpoint-postgres>=2.0.0",
    "psycopg[binary,pool]>=3.1.0",
    "psycopg2-binary>=2.9.11",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy[asyncio]>=2.0.45",
    "tavily>=1.1.0",
]
